resolve mobile overflow issue by adjusting CSS

--- a/style.css
+++ b/style.css
@@ -3,7 +3,10 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+main{
+  width: 100%;
+  margin: auto;
+}
 .top {
   position: relative;
   background-color: #24053e;
@@ -190,7 +193,7 @@ h6 {
 }
 
 .btn {
-  width: 40%;
+  width: 27%;
   height: 3rem;
   border: none;
   background-color: #44ffa1;
@@ -209,12 +212,20 @@ h6 {
   bottom: -8rem;
   right: 200px;
 }
-
-.social-media {
-  position: absolute;
-  margin-top: 14rem;
-  left: 600px;
+.footer{
+  margin: auto;
+  margin-top: 10rem;
+  width: 10%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
 }
+.social-media {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+} 
 
 /* TABLET VIEW MEDIA QUERIES */
 @media (min-width: 481px) and (max-width: 1024px) {
@@ -331,20 +342,25 @@ h6 {
     right: 5.5rem;
     left: 28rem;
   }
-  .footer {
-    position: absolute;
-    margin-top: 15rem;
-    right: 1500px;
+  .footer{
+  margin-top: 25rem;
+  width: 10%;
+}
+ .social-media{
+    width: 200%;
+  }
+.social-media img{
+    padding: 1rem;
   }
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
   .nav-bar {
     margin: 3rem;
-    width: 21rem;
+    width: 90%;
   }
 
-  .nvimg {
+  #nvimg {
     width: -6rem;
     margin-left: 1rem;
     margin-top: -1rem;
@@ -365,6 +381,7 @@ h6 {
   }
 
   .top {
+    width: 100%;
     height: 35rem;
     border-bottom-left-radius: 35% 3%;
     border-bottom-right-radius: 35% 3%;
@@ -373,7 +390,7 @@ h6 {
   .phone img{
     position: relative;
     margin-left: 2rem;
-    top: -2rem;
+    top: 1rem;
     width: 90%;
   }
   .middle {
@@ -398,38 +415,38 @@ h6 {
   .down-text {
     position: relative;
     top: 4rem;
-    width: 120%;
-    height: 25rem;
-    margin-left: 4rem;
+    width: 100%;
+    height: 30rem;
+    padding: 0 2rem;
+    margin-inline: 18% 0;
+    text-align: center;
   }
   .down-text h2 {
     font-size: 22px;
     line-height: 5px;
     margin-top: -9rem;
     font-weight: 6rem;
-    width: 24rem;
   }
   .down-text p {
-    /* width: 30rem; */
     font-size: 20px;
     line-height: 27px;
     height: 5rem;
-    width: 18rem;
     text-align: center;
     margin-top: 2rem;
-    margin-left: -2.5rem;
   }
   .down-text .btn{
-    width: 100%;
+    width: 65%;
     position: relative;
-    top: 8rem;
+    top: 12rem;
+    left: 2rem;
     }
-  .footer {
-    position: absolute;
-    margin-top: -7rem;
-    left: -10rem;
+  .footer{
+    width:5%;
   }
   .social-media{
-    left: 300px;
+    width: 700%;
+  }
+  .social-media img{
+    padding: 1rem;
   }
 }
